discussion/kv_engine/147177/147177_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44585: Remove HDRHistogram bias

HDRHistograms currently add 1 to all added values, and subtract 1 from
all read values.

This was done based on the understanding that HDRHistograms cannot
store the value 0, so all values were mapped up by 1 to allow for
storing 0.

This appears to stem from:

 int hdr_init_ex(int64_t lowest_trackable_value,
                 int64_t highest_trackable_value,
                 ...);

Which takes a lowest trackable value argument. If this is set to 0, the
call will later fail in

 int hdr_calculate_bucket_config(...) {
 ...
     if (lowest_trackable_value < 1 ||
             significant_figures < 1 || 5 < significant_figures)
     {
         return EINVAL;
     }
 ...
 }

However, this variable name is misleading. Based on its usage and the
Java HDRHistogram [1] comments, it would be better named
`lowestDiscernibleValue`. It is the lowest _non-zero_ trackable value,
and represents the finest granularity required from the histogram.

Java comment:
   /**
     * Construct a histogram given the Lowest and Highest values to be tracked and a number of significant
     * decimal digits. Providing a lowestDiscernibleValue is useful is situations where the units used
     * for the histogram's values are much smaller that the minimal accuracy required. E.g. when tracking
     * time values stated in nanosecond units, where the minimal accuracy required is a microsecond, the
     * proper value for lowestDiscernibleValue would be 1000.
     *
     * @param lowestDiscernibleValue The lowest value that can be discerned (distinguished from 0) by the histogram.
     *                               Must be a positive integer that is {@literal >=} 1. May be internally rounded
     *                               down to nearest power of 2.
     * @param highestTrackableValue The highest value to be tracked by the histogram. Must be a positive
     *                              integer that is {@literal >=} (2 * lowestDiscernibleValue).
     * @param numberOfSignificantValueDigits The number of significant decimal digits to which the histogram will
     *                                       maintain value resolution and separation. Must be a non-negative
     *                                       integer between 0 and 5.
     */

While this biasing does not generally affect correctness, it leads to
unexpected 0 upper bound buckets when using iterators other than
percentile.

This patch removes the biasing.

Change-Id: Ica5fed32bbddded59f8e0e0a2190e879eefd9cbe

---

[1]: https://github.com/HdrHistogram/HdrHistogram/blob/377de7da9b08c4f6cf159b3157f4a0e0492b9c39/src/main/java/org/HdrHistogram/AbstractHistogram.java

Change-Id: I062d866d43cd030de110f8edb14a076967445027

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-02-26 17:22:25.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-26 17:47:07.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9041/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9041/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8904/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8904/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16803/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7302/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:36:9: error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"? [clang-diagnostic-error]
    if (lowestTrackableValue >= highestTrackableValue ||
        ^~~~~~~~~~~~~~~~~~~~
        highestTrackableValue
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:33:37: note: "highestTrackableValue" declared here
                           uint64_t highestTrackableValue,
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:41:32: error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"? [clang-diagnostic-error]
                std::to_string(lowestTrackableValue) +
                               ^~~~~~~~~~~~~~~~~~~~
                               highestTrackableValue
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:33:37: note: "highestTrackableValue" declared here
                           uint64_t highestTrackableValue,
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:312:9: error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"? [clang-diagnostic-error]
    if (lowestTrackableValue >= highestTrackableValue ||
        ^~~~~~~~~~~~~~~~~~~~
        highestTrackableValue
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:310:36: note: "highestTrackableValue" declared here
                          uint64_t highestTrackableValue,
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:317:32: error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"? [clang-diagnostic-error]
                std::to_string(lowestTrackableValue) +
                               ^~~~~~~~~~~~~~~~~~~~
                               highestTrackableValue
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:310:36: note: "highestTrackableValue" declared here
                          uint64_t highestTrackableValue,
                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7302/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:36:9:
error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7302/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33857/ : FAILURE

Compile error at ..\kv_engine\utilities\hdrhistogram.cc(36): error C2065: "lowestTrackableValue": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33857/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29097/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/hdrhistogram.cc:36:9:
error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29097/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9252/ : FAILURE

Compile error at [2021-02-26T17:45:53.974Z] ../kv_engine/utilities/hdrhistogram.cc:36:9:
error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9252/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7960/ : FAILURE

Compile error at [2021-02-26T17:36:17.377Z] ../kv_engine/utilities/hdrhistogram.cc:36:9:
error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7960/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5838/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
